to stop the bottom button from overlapping into the padding area, I added display inline block to change the behaviour

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ header{
     text-decoration: none;
     padding: 8px;
     border-radius: 4px;
+    display: inline-block;
 }
 .projects .btn:hover{
     background: rgba(47, 48, 97, 80%);
